--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../git2/style.css">
 </head>
 <body>
-    <h1>FUTUTA LABs</h1>
+    <h1>FUTUTA LABsssssss</h1>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestias tenetur hic itaque, minus dolorum quos expedita voluptatem quam cupiditate temporibus ut laboriosam veniam, ab blanditiis magnam possimus? Doloribus, provident repudiandae?
     Voluptates molestiae eos similique minus! Praesentium amet, ipsa, voluptas optio cumque velit, alias aliquam natus placeat architecto facere eveniet molestias delectus recusandae ipsam earum dignissimos est enim! Inventore, illum voluptatum.
     Nostrum repudiandae vel ipsam laudantium odio ex sint quasi ea asperiores. In, doloribus officia fuga placeat possimus nam molestiae quod iste culpa facilis provident ab, quibusdam autem voluptates tenetur perspiciatis.
